destca/destca-test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: destca-test
spec:
  selector:
    matchLabels:
      app: destca-test
  template:
    metadata:
      labels:
        app: destca-test
    spec:
      containers:
      - name: destca-test
        image: registry.int.frobware.com/destca/html-server
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          capabilities:
            drop:
            - ALL
          seccompProfile:
            type: RuntimeDefault
        ports:
        - containerPort: 8443
          protocol: TCP
          name: "https"
        - containerPort: 8080
          protocol: TCP
          name: "http"
        volumeMounts:
        - mountPath: /etc/serving-cert
          name: cert
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /ready
            port: 8080
          initialDelaySeconds: 1
          periodSeconds: 1
          successThreshold: 1
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthy
            port: 8080
          initialDelaySeconds: 1
          periodSeconds: 1
          successThreshold: 1
      volumes:
      - name: cert
        secret:
          secretName: serving-cert-destca-test
