destca/destca-test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: destca-test
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: serving-cert-destca-test
spec:
  selector:
    app: destca-test
  ports:
  - name: https
    protocol: TCP
    port: 8443
    targetPort: 8443
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
